# cs487-parking

./: .gitignore  Cargo.toml  README.md  db.sql  initdb.sh  structs.rs
src/: booking.rs  db.rs  lot.rs  main.rs  user.rs  vehicle.rs
src/db/: mod.rs
templates/: home.hbs  index.hbs  lot_view.hbs  owner.hbs  parker.hbs
