[package]
name = "parking"
version = "0.1.0"
authors = ["Nick Wanninger <nickwanninger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
postgres = "0.17.2"
rocket = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
bcrypt = "0.7"


[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["handlebars_templates", "serve"]
